created the outline of the planner

--- a/index.html
+++ b/index.html
@@ -7,22 +7,106 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css" />
-    <script src="script.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+
 </head>
 
 <body>
     <div id="intro">
         <h1>Daily Planner</h1>
-        <div class="input-group mb-3">
-            <input type="text" class="form-control" placeholder="Event Name" aria-label="Recipient's username" aria-describedby="button-addon2">
-            <div class="input-group-append">
-              <button class="btn btn-outline-secondary" type="button" id="button-addon2">Create Event</button>
-            </div>
-          </div>
+    </div>
+
     <div id="date_time"></div>
-    <div id="planner"></div>
-    
+    <div id="planner">
+        <div class="input-group mb-3">
+            <div class="input-group-prepend">
+                <span class="input-group-text">9AM</span>
+            </div>
+            <input id="9am" type="text" class="form-control plans" aria-label="Amount (to the nearest dollar)">
+            <div  class="input-group-append event">
+                <span class="btn btn-primary">Add Event</span>
+            </div>
+        </div>
+        <div class="input-group mb-3">
+            <div class="input-group-prepend">
+                <span class="input-group-text">10AM</span>
+            </div>
+            <input id="10am" type="text" class="form-control plans" aria-label="Amount (to the nearest dollar)">
+            <div  class="input-group-append event">
+                <span class="btn btn-primary">Add Event</span>
+            </div>
+        </div>
+        <div class="input-group mb-3">
+            <div class="input-group-prepend">
+                <span class="input-group-text">11AM</span>
+            </div>
+            <input id="11am" type="text" class="form-control plans" aria-label="Amount (to the nearest dollar)">
+            <div  class="input-group-append event">
+                <span class="btn btn-primary">Add Event</span>
+            </div>
+        </div>
+        <div class="input-group mb-3">
+            <div class="input-group-prepend">
+                <span class="input-group-text">12PM</span>
+            </div>
+            <input id="12pm" type="text" class="form-control plans" aria-label="Amount (to the nearest dollar)">
+            <div  class="input-group-append event">
+                <span class="btn btn-primary">Add Event</span>
+            </div>
+        </div>
+        <div class="input-group mb-3">
+            <div class="input-group-prepend">
+                <span class="input-group-text">1PM</span>
+            </div>
+            <input id="1pm" type="text" class="form-control plans" aria-label="Amount (to the nearest dollar)">
+            <div  class="input-group-append event">
+                <span class="btn btn-primary">Add Event</span>
+            </div>
+        </div>
+        <div class="input-group mb-3">
+            <div class="input-group-prepend">
+                <span class="input-group-text">2PM</span>
+            </div>
+            <input id="2pm" type="text" class="form-control plans" aria-label="Amount (to the nearest dollar)">
+            <div  class="input-group-append event">
+                <span class="btn btn-primary">Add Event</span>
+            </div>
+        </div>
+        <div class="input-group mb-3">
+            <div class="input-group-prepend">
+                <span class="input-group-text">3PM</span>
+            </div>
+            <input id="3pm" type="text" class="form-control plans" aria-label="Amount (to the nearest dollar)">
+            <div  class="input-group-append event">
+                <span class="btn btn-primary">Add Event</span>
+            </div>
+        </div>
+        <div class="input-group mb-3">
+            <div class="input-group-prepend">
+                <span class="input-group-text">4PM</span>
+            </div>
+            <input id="4pm" type="text" class="form-control plans" aria-label="Amount (to the nearest dollar)">
+            <div  class="input-group-append event">
+                <span class="btn btn-primary">Add Event</span>
+            </div>
+        </div>
+        <div class="input-group mb-3">
+            <div class="input-group-prepend">
+                <span class="input-group-text">5PM</span>
+            </div>
+            <input id="5pm" type="text" class="form-control plans" aria-label="Amount (to the nearest dollar)">
+            <div  class="input-group-append event">
+                <span class="btn btn-primary">Add Event</span>
+            </div>
+        </div>
+
+
+
+    </div>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
