--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
 <body>
     <div id="intro">
-        <h1>Daily Planner</h1>
+        <h1>Workday Planner</h1>
+        <h2>A simple calendar app for scheduling your workday!</h2>
     </div>
 
     <div id="date_time"></div>
@@ -21,7 +22,7 @@
             <div class="input-group-prepend">
                 <span class="input-group-text">9AM</span>
             </div>
-            <input id="9am" type="text" class="form-control plans" aria-label="Amount (to the nearest dollar)">
+            <input id="9" type="text" class="form-control plans" aria-label="Amount (to the nearest dollar)">
             <div  class="input-group-append event">
                 <span class="btn btn-primary">Add Event</span>
             </div>
@@ -30,7 +31,7 @@
             <div class="input-group-prepend">
                 <span class="input-group-text">10AM</span>
             </div>
-            <input id="10am" type="text" class="form-control plans" aria-label="Amount (to the nearest dollar)">
+            <input id="10" type="text" class="form-control plans" aria-label="Amount (to the nearest dollar)">
             <div  class="input-group-append event">
                 <span class="btn btn-primary">Add Event</span>
             </div>
@@ -39,7 +40,7 @@
             <div class="input-group-prepend">
                 <span class="input-group-text">11AM</span>
             </div>
-            <input id="11am" type="text" class="form-control plans" aria-label="Amount (to the nearest dollar)">
+            <input id="11" type="text" class="form-control plans" aria-label="Amount (to the nearest dollar)">
             <div  class="input-group-append event">
                 <span class="btn btn-primary">Add Event</span>
             </div>
@@ -48,7 +49,7 @@
             <div class="input-group-prepend">
                 <span class="input-group-text">12PM</span>
             </div>
-            <input id="12pm" type="text" class="form-control plans" aria-label="Amount (to the nearest dollar)">
+            <input id="12" type="text" class="form-control plans" aria-label="Amount (to the nearest dollar)">
             <div  class="input-group-append event">
                 <span class="btn btn-primary">Add Event</span>
             </div>
@@ -57,7 +58,7 @@
             <div class="input-group-prepend">
                 <span class="input-group-text">1PM</span>
             </div>
-            <input id="1pm" type="text" class="form-control plans" aria-label="Amount (to the nearest dollar)">
+            <input id="13" type="text" class="form-control plans" aria-label="Amount (to the nearest dollar)">
             <div  class="input-group-append event">
                 <span class="btn btn-primary">Add Event</span>
             </div>
@@ -66,7 +67,7 @@
             <div class="input-group-prepend">
                 <span class="input-group-text">2PM</span>
             </div>
-            <input id="2pm" type="text" class="form-control plans" aria-label="Amount (to the nearest dollar)">
+            <input id="14" type="text" class="form-control plans" aria-label="Amount (to the nearest dollar)">
             <div  class="input-group-append event">
                 <span class="btn btn-primary">Add Event</span>
             </div>
@@ -75,7 +76,7 @@
             <div class="input-group-prepend">
                 <span class="input-group-text">3PM</span>
             </div>
-            <input id="3pm" type="text" class="form-control plans" aria-label="Amount (to the nearest dollar)">
+            <input id="15" type="text" class="form-control plans" aria-label="Amount (to the nearest dollar)">
             <div  class="input-group-append event">
                 <span class="btn btn-primary">Add Event</span>
             </div>
@@ -84,7 +85,7 @@
             <div class="input-group-prepend">
                 <span class="input-group-text">4PM</span>
             </div>
-            <input id="4pm" type="text" class="form-control plans" aria-label="Amount (to the nearest dollar)">
+            <input id="16" type="text" class="form-control plans" aria-label="Amount (to the nearest dollar)">
             <div  class="input-group-append event">
                 <span class="btn btn-primary">Add Event</span>
             </div>
@@ -93,7 +94,7 @@
             <div class="input-group-prepend">
                 <span class="input-group-text">5PM</span>
             </div>
-            <input id="5pm" type="text" class="form-control plans" aria-label="Amount (to the nearest dollar)">
+            <input id="17" type="text" class="form-control plans" aria-label="Amount (to the nearest dollar)">
             <div  class="input-group-append event">
                 <span class="btn btn-primary">Add Event</span>
             </div>
